# analyze

./: .travis.yml  Cargo.toml  Makefile  README.md
analyze/: Cargo.toml
analyze/src/: build.rs  lib.rs  main.rs
analyze_base/: Cargo.toml
analyze_base/src/: build.rs  lib.rs
preload/: Cargo.toml
preload/src/: lib.rs
tracker/preload/: Cargo.toml  build.rs
tracker/preload/libc_preload/: CMakeLists.txt  access.c  exec.c  file_report.c  file_report.h  libc.c  libc.h  main.c  main.test.c  report.c  report.h  util.c  util.h
tracker/preload/src/: lib.rs
tracker/track/: Cargo.toml
tracker/track/src/: build.rs  main.rs  util.rs
